update load from local data
add comments
remove extra sfuff

--- a/load from local data.ipynb
+++ b/load from local data.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download scene_graphs.json from Visual Genome \n",
     "with open(\"scene_graphs.json\", \"r\") as read_file:\n",
     "    data = json.load(read_file)"
    ]
@@ -39,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download relationships.json from Visual Genome \n",
     "with open(\"relationships.json\", \"r\") as read_file:\n",
     "    relation = json.load(read_file)"
    ]
@@ -49,6 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download image_id_file.txt from GitHub\n",
+    "# It saves the correlated image index in the list to image id\n",
     "with open(\"image_id_file.txt\", \"r\") as read_file:\n",
     "    lines = read_file.read().splitlines()"
    ]
@@ -63,7 +67,7 @@
     "    data = json.load(read_file)\n",
     "with open(\"image_id_file.txt\", \"r\") as read_file:\n",
     "    lines = read_file.read().splitlines()\n",
-    "\n",
+    "# This function plot image of that id with region box and object names\n",
     "def local_visualize_region_object(image_id,number_regions=9999):\n",
     "    fig = plt.gcf()\n",
     "    fig.set_size_inches(18.5, 10.5)\n",
@@ -115,207 +119,8 @@
     }
    ],
    "source": [
-    "local_visualize_region_object(5,number_regions=8)"
+    "local_visualize_region_object(5,number_regions=8)# number of regions want to plot, here is 8"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "clean_data = copy.deepcopy(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#del(dict2[0]['objects'][1]['names'][0])\n",
-    "dict2[0]['objects'][1]\n",
-    "len(dict2[0]['objects'][1]['names'])\n",
-    "len(dict2[0]['objects'][2]['names'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"object_file.txt\", \"r\") as read_file:\n",
-    "    lines = read_file.read().splitlines()\n",
-    "top50=lines[:50]\n",
-    "top_50=[None]*50\n",
-    "for i in range(0,len(top50)):\n",
-    "    top50[i] = top50[i].split()\n",
-    "    top_50[i] = top50[i][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(0,len(clean_data)):\n",
-    "    for j in range(0,len(clean_data[i]['objects'])):\n",
-    "        for k in range (0,len(clean_data[i]['objects'][j]['names'])):\n",
-    "            if 0,len(clean_data[i]['objects'][j]['names'][k] in top_50:\n",
-    "                     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regions = api.get_region_descriptions_of_image(id=61512)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[id: 1, x: 511, y: 241, width: 206,height: 320, phrase: A brown, sleek horse with a bridle, image: 61512,\n",
-       " id: 6, x: 291, y: 214, width: 431,height: 345, phrase: two horses stand on the grass, image: 61512,\n",
-       " id: 11, x: 297, y: 235, width: 424,height: 321, phrase: Two horses in a pasture, image: 61512,\n",
-       " id: 16, x: 292, y: 227, width: 430,height: 326, phrase: spotted white and brown horse sniffing brown horse, image: 61512,\n",
-       " id: 21, x: 293, y: 201, width: 332,height: 275, phrase: A dark brown horse has his nose on a red horse, image: 61512,\n",
-       " id: 982, x: 293, y: 223, width: 425,height: 337, phrase: Both horses are wearing bridles., image: 61512,\n",
-       " id: 1182, x: 466, y: 32, width: 84,height: 100, phrase: A RED truck is in the background, image: 61512,\n",
-       " id: 8182, x: 279, y: 217, width: 450,height: 348, phrase: two brown horses, image: 61512,\n",
-       " id: 8183, x: 454, y: 27, width: 103,height: 100, phrase: red truck in the background, image: 61512,\n",
-       " id: 8185, x: 545, y: 90, width: 143,height: 55, phrase: the red gate, image: 61512,\n",
-       " id: 8186, x: 570, y: 24, width: 98,height: 112, phrase: a white truck to the right of the red truck, image: 61512,\n",
-       " id: 8187, x: 147, y: 119, width: 33,height: 29, phrase: blue tire of a trailer, image: 61512,\n",
-       " id: 8188, x: 684, y: 122, width: 51,height: 32, phrase: water trough for the horses, image: 61512,\n",
-       " id: 8189, x: 697, y: 80, width: 315,height: 114, phrase: a wooden fence, image: 61512,\n",
-       " id: 8190, x: 310, y: 51, width: 62,height: 43, phrase: The window next to the door, image: 61512,\n",
-       " id: 8191, x: 264, y: 64, width: 42,height: 73, phrase: front door of the building\n",
-       " , image: 61512,\n",
-       " id: 8192, x: 294, y: 216, width: 433,height: 327, phrase: two horses standing next to each other, image: 61512,\n",
-       " id: 8193, x: 440, y: 32, width: 119,height: 92, phrase: a red truck, image: 61512,\n",
-       " id: 8194, x: 270, y: 212, width: 256,height: 285, phrase: a brown and white horse, image: 61512,\n",
-       " id: 8195, x: 256, y: 1, width: 206,height: 118, phrase: a tan building , image: 61512,\n",
-       " id: 8196, x: 497, y: 263, width: 77,height: 48, phrase: a red halter on the horse, image: 61512,\n",
-       " id: 8197, x: 500, y: 236, width: 238,height: 308, phrase: a brown horse, image: 61512,\n",
-       " id: 8198, x: 710, y: 107, width: 298,height: 86, phrase: wooden fence, image: 61512,\n",
-       " id: 8199, x: 0, y: 0, width: 311,height: 90, phrase: leaves on a tree, image: 61512,\n",
-       " id: 8200, x: 715, y: 201, width: 292,height: 276, phrase: a grassy area, image: 61512,\n",
-       " id: 8201, x: 312, y: 244, width: 421,height: 268, phrase: the horse is nudging the other, image: 61512,\n",
-       " id: 8202, x: 466, y: 35, width: 80,height: 59, phrase: A bright red truck cab., image: 61512,\n",
-       " id: 8203, x: 545, y: 92, width: 137,height: 43, phrase: An orange gate at the entrance of the field., image: 61512,\n",
-       " id: 8204, x: 403, y: 247, width: 109,height: 71, phrase: The horse has a cream colored mane., image: 61512,\n",
-       " id: 8205, x: 498, y: 275, width: 71,height: 29, phrase: A red bridle nose band., image: 61512,\n",
-       " id: 8206, x: 48, y: 2, width: 231,height: 143, phrase: Low hanging tree branches., image: 61512,\n",
-       " id: 8207, x: 138, y: 127, width: 42,height: 20, phrase: The tire has a blue wheel well., image: 61512,\n",
-       " id: 8208, x: 574, y: 21, width: 87,height: 78, phrase: A white truck with lettering on the front., image: 61512,\n",
-       " id: 8209, x: 270, y: 111, width: 73,height: 30, phrase: An old white bath tub., image: 61512,\n",
-       " id: 8210, x: 512, y: 272, width: 128,height: 99, phrase: This horse has a red mane., image: 61512,\n",
-       " id: 8211, x: 272, y: 219, width: 242,height: 288, phrase: The horse is brown and cream colored. , image: 61512,\n",
-       " id: 8212, x: 21, y: 5, width: 231,height: 128, phrase: green deciduous tree leaves, image: 61512,\n",
-       " id: 8213, x: 789, y: 266, width: 216,height: 251, phrase: lush green pasture, image: 61512,\n",
-       " id: 8214, x: 705, y: 81, width: 245,height: 99, phrase: wooden corral fence to enclose ponies, image: 61512,\n",
-       " id: 8215, x: 294, y: 255, width: 238,height: 232, phrase: brown and white pony, image: 61512,\n",
-       " id: 8216, x: 523, y: 304, width: 184,height: 238, phrase: chestnut pony facing forward wearing bridle, image: 61512,\n",
-       " id: 8217, x: 551, y: 89, width: 141,height: 59, phrase: red corral gate, image: 61512,\n",
-       " id: 8218, x: 690, y: 14, width: 272,height: 149, phrase: leafy green shrubbery, image: 61512,\n",
-       " id: 8219, x: 269, y: 4, width: 193,height: 100, phrase: brick building with tile roof, image: 61512,\n",
-       " id: 8220, x: 263, y: 119, width: 87,height: 30, phrase: water trough for horses, image: 61512,\n",
-       " id: 8221, x: 456, y: 17, width: 96,height: 111, phrase: large semi truck, image: 61512,\n",
-       " id: 8222, x: 544, y: 78, width: 160,height: 67, phrase: A bright red gate, image: 61512,\n",
-       " id: 8223, x: 509, y: 264, width: 225,height: 276, phrase: A chestnut colored horse, image: 61512,\n",
-       " id: 8224, x: 813, y: 122, width: 149,height: 52, phrase: Double row wooden log fence, image: 61512,\n",
-       " id: 8226, x: 133, y: 115, width: 59,height: 42, phrase: Blue rimmed tire, image: 61512,\n",
-       " id: 8227, x: 294, y: 52, width: 100,height: 51, phrase: Window in a brick building, image: 61512,\n",
-       " id: 8228, x: 62, y: 146, width: 721,height: 99, phrase: Field of green grass, image: 61512,\n",
-       " id: 8229, x: 0, y: 5, width: 282,height: 162, phrase: Leaves of a tree, image: 61512,\n",
-       " id: 8230, x: 288, y: 235, width: 228,height: 257, phrase: Brown and white pony, image: 61512,\n",
-       " id: 8231, x: 264, y: 112, width: 86,height: 48, phrase: old white clawfoot bathtub, image: 61512,\n",
-       " id: 8232, x: 506, y: 256, width: 213,height: 267, phrase: Brown horse with orange brown mane, image: 61512,\n",
-       " id: 8233, x: 814, y: 393, width: 181,height: 174, phrase: bright green grass patch, image: 61512,\n",
-       " id: 8234, x: 288, y: 239, width: 256,height: 241, phrase: brown and cream horse, image: 61512,\n",
-       " id: 8235, x: 226, y: 339, width: 89,height: 317, phrase: leafy light green plant, image: 61512,\n",
-       " id: 8236, x: 820, y: 117, width: 133,height: 55, phrase: light brown wooden fence, image: 61512,\n",
-       " id: 8237, x: 143, y: 121, width: 32,height: 27, phrase: blue and black wheels, image: 61512,\n",
-       " id: 8238, x: 0, y: 0, width: 291,height: 137, phrase: dark green tree branches, image: 61512,\n",
-       " id: 8239, x: 256, y: 0, width: 209,height: 137, phrase: brick building with glass windows, image: 61512,\n",
-       " id: 8240, x: 452, y: 11, width: 99,height: 118, phrase: large red truck cab, image: 61512,\n",
-       " id: 8241, x: 671, y: 4, width: 326,height: 131, phrase: two leafy green bushes, image: 61512,\n",
-       " id: 11193, x: 501, y: 232, width: 250,height: 337, phrase: brown horse with brown mane, image: 61512,\n",
-       " id: 11194, x: 451, y: 11, width: 133,height: 131, phrase: red semi truck cab, image: 61512,\n",
-       " id: 11195, x: 691, y: 62, width: 320,height: 168, phrase: double rail wood fence, image: 61512,\n",
-       " id: 11196, x: 535, y: 83, width: 165,height: 65, phrase: orange metal gate, image: 61512,\n",
-       " id: 11197, x: 239, y: 125, width: 528,height: 457, phrase: green pasture area for horses, image: 61512,\n",
-       " id: 11198, x: 217, y: 0, width: 253,height: 131, phrase: brick building behind pasture, image: 61512,\n",
-       " id: 11199, x: 134, y: 112, width: 76,height: 67, phrase: blue wheel on trailer, image: 61512,\n",
-       " id: 11200, x: 574, y: 20, width: 96,height: 87, phrase: white truck behind gate, image: 61512,\n",
-       " id: 11201, x: 259, y: 103, width: 109,height: 49, phrase: old white bathtub in pasture, image: 61512,\n",
-       " id: 11202, x: 297, y: 228, width: 263,height: 280, phrase: brown horse with white spots, image: 61512,\n",
-       " id: 11203, x: 509, y: 244, width: 203,height: 298, phrase: erd horse with bridle, image: 61512,\n",
-       " id: 11204, x: 550, y: 92, width: 134,height: 48, phrase: bright red gate, image: 61512,\n",
-       " id: 11205, x: 266, y: 0, width: 203,height: 115, phrase: orange building with brown roof, image: 61512,\n",
-       " id: 11206, x: 6, y: 130, width: 1016,height: 544, phrase: bright green horse pasture, image: 61512,\n",
-       " id: 11207, x: 455, y: 14, width: 93,height: 111, phrase: red semi truck, image: 61512,\n",
-       " id: 11208, x: 678, y: 86, width: 288,height: 96, phrase: fence made out of wood rounds, image: 61512,\n",
-       " id: 11209, x: 57, y: 54, width: 191,height: 86, phrase: small white motorhome with blue rims, image: 61512,\n",
-       " id: 11210, x: 568, y: 2, width: 92,height: 111, phrase: large white semi truck, image: 61512,\n",
-       " id: 11211, x: 268, y: 43, width: 35,height: 14, phrase: blue sign on building that says bovril, image: 61512,\n",
-       " id: 11212, x: 19, y: 318, width: 204,height: 118, phrase: Grass is bright green, image: 61512,\n",
-       " id: 11213, x: 283, y: 170, width: 479,height: 329, phrase: Two horses next to each other, image: 61512,\n",
-       " id: 11214, x: 275, y: 240, width: 253,height: 232, phrase: A horse is brown and white, image: 61512,\n",
-       " id: 11216, x: 790, y: 453, width: 220,height: 212, phrase: Flowers in the grass, image: 61512,\n",
-       " id: 11218, x: 684, y: 10, width: 278,height: 157, phrase: Trees in the background, image: 61512,\n",
-       " id: 11219, x: 792, y: 92, width: 181,height: 109, phrase: A wooden fence, image: 61512,\n",
-       " id: 11220, x: 247, y: 2, width: 200,height: 60, phrase: Roof of a building, image: 61512,\n",
-       " id: 11221, x: 407, y: 234, width: 267,height: 150, phrase: Manes on two horses, image: 61512,\n",
-       " id: 11222, x: 509, y: 238, width: 212,height: 318, phrase: dark red horse in pasture, image: 61512,\n",
-       " id: 11223, x: 288, y: 238, width: 266,height: 257, phrase: brown and white horse in pasture, image: 61512,\n",
-       " id: 11224, x: 291, y: 216, width: 433,height: 354, phrase: two horses grazing in a pasture, image: 61512,\n",
-       " id: 11225, x: 701, y: 92, width: 275,height: 96, phrase: wooden fence alongside pasture, image: 61512,\n",
-       " id: 11226, x: 543, y: 83, width: 159,height: 67, phrase: red cattle guard gate to pasture, image: 61512,\n",
-       " id: 11227, x: 59, y: 84, width: 193,height: 65, phrase: white vehicle with blue wheels, image: 61512,\n",
-       " id: 11228, x: 461, y: 27, width: 87,height: 134, phrase: red semi tractor trailer truck, image: 61512,\n",
-       " id: 11229, x: 694, y: 11, width: 269,height: 109, phrase: group of trees next to pasture, image: 61512,\n",
-       " id: 11230, x: 265, y: 5, width: 210,height: 146, phrase: red brick building in background, image: 61512,\n",
-       " id: 11231, x: 5, y: 5, width: 250,height: 124, phrase: leaves on the overhanging branch, image: 61512]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "regions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
